# algotrader

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  IMPROVEMENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: BACKTESTING.md  HOWTO.md  INDICATORS.md  MARKET_CONDITIONS.md  ML_WORKFLOW.md  OVERVIEW.md  RISK_MANAGEMENT.md  STRATEGIES.md
scripts/: README.md  _redis.py  backtest.py  clear_redis.py  gen_version.py  requirements.txt  smoke_test_ml.py  train_model.py  train_vol_model.py
scripts/brain/: README.md  clear_brain_cache.py  write_mock_filtered_candidates.py
scripts/executor/: push_mock_trade_command.py  push_mock_trade_commands.py
scripts/filter/: write_mock_filtered_candidates.py
scripts/messenger/: push_mock_notification_trade_closed.py  push_mock_notification_trade_confirmed.py  write_mock_signals.py
scripts/monitor/: write_mock_active_trades.py
scripts/risk-manager/: placeholder.py
scripts/scout/: write_mock_market_data.py
services/backtester/: Dockerfile  main.py  requirements.txt
services/brain/: Dockerfile  main.py  requirements.txt
services/dashboard/: Dockerfile  main.py  requirements.txt
services/executor/: Dockerfile  main.py  requirements.txt
services/filter/: Dockerfile  main.py  requirements.txt
services/messenger/: main.py  (+2 more)
shared/: analytics.py  backtest_db.py  config.py  cross_validation.py  db.py  decision.py  features.py  indicators.py  logger.py  ml_model.py  portfolio.py  version.py
tests/: conftest.py  test_config.py  test_filter.py  test_monitor.py
(+9 files in other folders)
