[project]
name = "algotrader"
version = "0.1.0"
description = "Microservices-based algorithmic trading system"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow assert in tests when we add them
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"
